--- a/index.html
+++ b/index.html
@@ -290,7 +290,13 @@
       });
     </script>
 </section>
-
+   <!-- More Projects Button -->
+<div class="text-center mt-12">
+    <a href="https://blog.naver.com/sungboo1211" target="_blank" rel="noopener noreferrer"
+       class="inline-block px-10 py-4 bg-gold text-white font-bold text-lg rounded-full shadow-lg hover:bg-yellow-500 transition-colors">
+        더 많은 시공 사례 보기
+    </a>
+</div>
 
     <!-- Contact Section -->
     <section id="contact" class="py-24 md:py-32 bg-white">
@@ -467,3 +473,4 @@
 </body>
 
 </html>
+
