--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <div class="mb-6 text-gold">
                             <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
                         </div>
-                        <h3 class="text-2xl font-bold text-white mb-4">사후 관리 지원</h3>
+                        <h3 class="text-2xl font-bold text-white mb-4">1년 A/S 지원</h3>
                         <p class="text-gray-300 leading-relaxed font-light">시공 후에도 안심하고 사용하실 수 있도록 책임감 있는 서비스를 실천합니다.</p>
                     </div>
                 </div>
@@ -169,6 +169,7 @@
                 <button data-filter="철계단" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">철계단</button>
                 <button data-filter="난간" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">난간</button>
                 <button data-filter="복층공사" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">복층공사</button>
+                <button data-filter="잡철" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">잡철</button>
                 <button data-filter="철구조물" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">철구조물</button>
             </div>
         </div>
@@ -310,15 +311,27 @@
                     <!-- 수정사항: 태블릿(md) 이상에서 가로 배열하되 텍스트는 좌측 정렬 -->
                     <div class="space-y-8 w-full max-w-md md:mx-auto lg:mx-0 lg:max-w-none">
                         <!-- Phone -->
-                        <div class="flex flex-col md:flex-row items-center gap-6 group">
+                        <a href="tel:01022430481"
+                           onclick="return confirm('010-2243-0481로 전화를 거시겠습니까?')"
+                           class="flex flex-col md:flex-row items-center gap-6 group cursor-pointer">
+
                             <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 group-hover:bg-gold group-hover:text-white transition-all shadow-sm">
-                                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path></svg>
+                                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 005.516 5.516l1.13-2.257a1 1 011.21-.502l4.493 1.498a1 1 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
+                                    </path>
+                                </svg>
                             </div>
+
                             <div class="md:text-left text-center">
-                                <p class="text-gray-400 text-xs font-bold uppercase tracking-widest mb-1">Quick Call</p>
-                                <p class="text-2xl font-bold">010-2243-0481</p>
-                            </div>
+                                <p class="text-gray-400 text-xs font-bold uppercase tracking-widest mb-1">
+                                    Quick Call
+                            </p>
+                            <p class="text-2xl font-bold">010-2243-0481</p>
                         </div>
+
+                        </a>
+
                         <!-- Email -->
                         <div class="flex flex-col md:flex-row items-center gap-6 group">
                             <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 group-hover:bg-gold group-hover:text-white transition-all shadow-sm">
@@ -473,4 +486,5 @@
 </body>
 
 </html>
+
 
