--- a/index.html
+++ b/index.html
@@ -376,6 +376,8 @@
                                 <option>철계단</option>
                                 <option>난간</option>
                                 <option>복층공사</option>
+                                <option>잡철</option>
+                                <option>철구조물</option>
                                 <option>기타</option>
                             </select>
                         </div>
@@ -420,9 +422,11 @@
                     <div>
                         <h4 class="font-bold text-gray-900 mb-6 uppercase">SERVICES</h4>
                         <ul class="space-y-3 text-gray-400 font-medium">
-                            <li><a href="#portfolio" class="hover:text-gold">계단 공사</a></li>
-                            <li><a href="#portfolio" class="hover:text-gold">난간 공사</a></li>
-                            <li><a href="#portfolio" class="hover:text-gold">복층 구조물</a></li>
+                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="stairs">계단 공사</a></li>
+                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="railing">난간 공사</a></li>
+                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="loft">복층 공사</a></li>
+                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="metal">잡철</a></li>
+                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="structure">철구조물</a></li>
                         </ul>
                     </div>
                     <div>
@@ -486,6 +490,7 @@
 </body>
 
 </html>
+
 
 
 
