Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         });
 
         // ----------------------------
-        // Portfolio Filter + Scroll + Active Button
+        // Portfolio Filter + Scroll
         // ----------------------------
         document.querySelectorAll('.filter-btn').forEach(button => {
             button.addEventListener('click', function () {
@@ -520,6 +520,7 @@
 </script>
 </body>
 </html>
+
 
 
 
