--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
 
             <!-- Filter Buttons with Mobile Scroll -->
             <div class="flex flex-nowrap overflow-x-auto gap-2 py-2 md:justify-start">
-                <button data-filter="all" class="filter-btn px-7 py-2.5 rounded-full bg-gold text-white text-sm font-bold shadow-lg flex-shrink-0">전체</button>
-                <button data-filter="stairs" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">철계단</button>
-                <button data-filter="railing" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">난간</button>
-                <button data-filter="loft" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">복층공사</button>
-                <button data-filter="metal" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">잡철</button>
-                <button data-filter="structure" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">철구조물</button>
+                <button data-filter="전체" class="filter-btn px-7 py-2.5 rounded-full bg-gold text-white text-sm font-bold shadow-lg flex-shrink-0">전체</button>
+                <button data-filter="철계단" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">철계단</button>
+                <button data-filter="난간" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">난간</button>
+                <button data-filter="복층공사" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">복층공사</button>
+                <button data-filter="잡철" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">잡철</button>
+                <button data-filter="철구조물" class="filter-btn px-7 py-2.5 rounded-full border border-gray-200 text-gray-400 text-sm font-bold hover:border-gray-400 hover:text-gray-700 transition-all flex-shrink-0">철구조물</button>
             </div>
         </div>
 
@@ -520,6 +520,7 @@
 </script>
 </body>
 </html>
+
 
 
 
