--- a/index.html
+++ b/index.html
@@ -422,11 +422,11 @@
                     <div>
                         <h4 class="font-bold text-gray-900 mb-6 uppercase">SERVICES</h4>
                         <ul class="space-y-3 text-gray-400 font-medium">
-                            <li><a href="#철계단" class="filter-btn hover:text-gold" data-filter="stairs">계단 공사</a></li>
-                            <li><a href="#난간" class="filter-btn hover:text-gold" data-filter="railing">난간 공사</a></li>
-                            <li><a href="#복층공사" class="filter-btn hover:text-gold" data-filter="loft">복층 공사</a></li>
-                            <li><a href="#잡철" class="filter-btn hover:text-gold" data-filter="metal">잡철</a></li>
-                            <li><a href="#철구조물" class="filter-btn hover:text-gold" data-filter="structure">철구조물</a></li>
+                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="stairs">계단 공사</a></li>
+                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="railing">난간 공사</a></li>
+                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="loft">복층 공사</a></li>
+                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="metal">잡철</a></li>
+                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="structure">철구조물</a></li>
                         </ul>
                     </div>
                     <div>
@@ -520,6 +520,7 @@
 </script>
 </body>
 </html>
+
 
 
 
