--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
                     <!-- 수정사항: 태블릿(md) 이상에서 가로 배열하되 텍스트는 좌측 정렬 -->
                     <div class="space-y-8 w-full max-w-md md:mx-auto lg:mx-0 lg:max-w-none">
                         <!-- Phone -->
-                        <a href="tel:01036975082"
-                           onclick="return confirm('010-3697-5082로 전화를 거시겠습니까?')"
+                        <a href="tel:01022430481"
+                           onclick="return confirm('010-2243-0481로 전화를 거시겠습니까?')"
                            class="flex flex-col md:flex-row items-center gap-6 group cursor-pointer">
 
                             <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 group-hover:bg-gold group-hover:text-white transition-all shadow-sm">
@@ -327,7 +327,7 @@
                                 <p class="text-gray-400 text-xs font-bold uppercase tracking-widest mb-1">
                                     Quick Call
                             </p>
-                            <p class="text-2xl font-bold">010-3697-5082</p>
+                            <p class="text-2xl font-bold">010-2243-0481</p>
                         </div>
 
                         </a>
@@ -422,11 +422,11 @@
                     <div>
                         <h4 class="font-bold text-gray-900 mb-6 uppercase">SERVICES</h4>
                         <ul class="space-y-3 text-gray-400 font-medium">
-                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="stairs">계단 공사</a></li>
-                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="railing">난간 공사</a></li>
-                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="loft">복층 공사</a></li>
-                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="metal">잡철</a></li>
-                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="structure">철구조물</a></li>
+                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="철계단">계단 공사</a></li>
+                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="난간">난간 공사</a></li>
+                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="복층공사">복층 공사</a></li>
+                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="잡철">잡철</a></li>
+                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="철구조물">철구조물</a></li>
                         </ul>
                     </div>
                     <div>
@@ -520,6 +520,7 @@
 </script>
 </body>
 </html>
+
 
 
 
