--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                     <div>
                         <h4 class="font-bold text-gray-900 mb-6 uppercase">SERVICES</h4>
                         <ul class="space-y-3 text-gray-400 font-medium">
-                            <div class="group block overflow-hidden project-item opacity-100 transition-opacity duration-500" class="filter-btn hover:text-gold" data-filter="철계단">계단 공사</a></li>
+                            <li><a href="#" class="filter-btn px-7 py-2.5 rounded-full bg-gold text-white text-sm font-bold shadow-lg flex-shrink-0"> data-filter="철계단">계단 공사</a></li>
                             <li><a href="#" class="filter-btn hover:text-gold" data-filter="난간">난간 공사</a></li>
                             <li><a href="#" class="filter-btn hover:text-gold" data-filter="복층공사">복층 공사</a></li>
                             <li><a href="#" class="filter-btn hover:text-gold" data-filter="잡철">잡철</a></li>
@@ -520,6 +520,7 @@
 </script>
 </body>
 </html>
+
 
 
 
