--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                     <div>
                         <h4 class="font-bold text-gray-900 mb-6 uppercase">SERVICES</h4>
                         <ul class="space-y-3 text-gray-400 font-medium">
-                            <li><a href="#" class="filter-btn px-7 py-2.5 rounded-full bg-gold text-white text-sm font-bold shadow-lg flex-shrink-0"> data-filter="철계단">계단 공사</a></li>
+                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="철계단">계단 공사</a></li>
                             <li><a href="#" class="filter-btn hover:text-gold" data-filter="난간">난간 공사</a></li>
                             <li><a href="#" class="filter-btn hover:text-gold" data-filter="복층공사">복층 공사</a></li>
                             <li><a href="#" class="filter-btn hover:text-gold" data-filter="잡철">잡철</a></li>
@@ -453,73 +453,90 @@
 
     <!-- Scripts -->
     <script>
-        // ----------------------------
-        // Mobile Menu Toggle
-        // ----------------------------
-        const menuBtn = document.getElementById('menu-btn');
-        const mobileMenu = document.getElementById('mobile-menu');
-    
-        menuBtn.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
+      // ----------------------------
+      // Mobile Menu Toggle
+      // ----------------------------
+      const menuBtn    = document.getElementById('menu-btn');
+      const mobileMenu = document.getElementById('mobile-menu');
 
-        // Close mobile menu on click link
-        document.querySelectorAll('#mobile-menu a').forEach(link => {
-            link.addEventListener('click', () => {
-                mobileMenu.classList.add('hidden');
+      menuBtn.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+      });
+
+      document.querySelectorAll('#mobile-menu a').forEach(link => {
+        link.addEventListener('click', () => {
+          mobileMenu.classList.add('hidden');
+        });
+      });
+
+      // Smooth scroll for anchors
+      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+          e.preventDefault();
+          const targetId = this.getAttribute('href');
+          if(targetId === '#') return;
+          const targetElement = document.querySelector(targetId);
+          if (targetElement) {
+            const offset = 80;
+            const targetPosition = targetElement.getBoundingClientRect().top + window.pageYOffset - offset;
+             window.scrollTo({
+              top: targetPosition,
+              behavior: 'smooth'
             });
+          }
         });
+      });
 
-        // Simple smooth scroll fallback (if needed)
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                if(targetId === '#') return;
-            
-                const targetElement = document.querySelector(targetId);
-                if (targetElement) {
-                    const offset = 80;
-                    const targetPosition = targetElement.getBoundingClientRect().top + window.pageYOffset - offset;
-                    window.scrollTo({
-                        top: targetPosition,
-                        behavior: 'smooth'
-                    });
-                }
+      // ----------------------------
+      // Portfolio Filter + Fade + Scroll
+      // ----------------------------
+      const filterButtons = document.querySelectorAll('.filter-btn');
+      const projects      = document.querySelectorAll('.project-item');
+
+      filterButtons.forEach(button => {
+        button.addEventListener('click', (e) => {
+          e.preventDefault(); // a 태그일 경우 이동 방지
+          const filter = button.dataset.filter.trim();
+
+          // 1️⃣ 버튼 스타일 초기화
+          filterButtons.forEach(btn => {
+            btn.classList.remove('bg-gold', 'text-white');
+            btn.classList.add('text-gray-400', 'border', 'border-gray-200');
+          });
+
+          // 2️⃣ 활성 버튼 스타일 적용
+          button.classList.add('bg-gold', 'text-white');
+          button.classList.remove('text-gray-400');
+
+          // 3️⃣ 프로젝트 필터링 with fade
+          projects.forEach(project => {
+            const category = project.dataset.category.trim();
+
+            if (filter === '전체' || category === filter) {
+              project.style.display = 'block';
+              setTimeout(() => project.style.opacity = 1, 10); // fade in
+            } else {
+              project.style.opacity = 0;                    // fade out
+              setTimeout(() => project.style.display = 'none', 300); // match duration
+            }
+          });
+
+          // 4️⃣ 포트폴리오 섹션으로 스크롤
+          const portfolioSection = document.getElementById('portfolio');
+          if (portfolioSection) {
+            const offset = 80; // 상단 메뉴 높이 보정
+            const targetPosition = portfolioSection.getBoundingClientRect().top + window.pageYOffset - offset;
+            window.scrollTo({
+              top: targetPosition,
+              behavior: 'smooth'
             });
+          }
         });
-
-        // ----------------------------
-        // Portfolio Filter + Scroll
-        // ----------------------------
-        document.querySelectorAll('.filter-btn').forEach(button => {
-            button.addEventListener('click', function () {
-                const filter = this.dataset.filter;
-
-                // 1️⃣ 포트폴리오 카드 필터
-                document.querySelectorAll('.project-item').forEach(item => {
-                    if (filter === "전체" || item.dataset.category === filter) {
-                        item.style.display = "block";
-                    } else {
-                        item.style.display = "none";
-                    }
-                });
-
-                // 2️⃣ 포트폴리오 섹션으로 스크롤
-                const portfolioSection = document.getElementById('portfolio');
-                if (portfolioSection) {
-                    const offset = 80; // 상단 메뉴 높이 보정
-                    const targetPosition = portfolioSection.getBoundingClientRect().top + window.pageYOffset - offset;
-                    window.scrollTo({
-                        top: targetPosition,
-                        behavior: 'smooth'
-                    });
-                }
-            });
-        });
+      });
 </script>
 </body>
 </html>
+
 
 
 
