--- a/index.html
+++ b/index.html
@@ -487,55 +487,61 @@
         });
       });
 
-      // ----------------------------
-      // Portfolio Filter + Fade + Scroll
-      // ----------------------------
-      const filterButtons = document.querySelectorAll('.filter-btn');
-      const projects      = document.querySelectorAll('.project-item');
+       // ----------------------------
+       // Portfolio Filter + Fade + Scroll
+       // ----------------------------
+       const filterButtons = document.querySelectorAll('.filter-btn');
+       const projects = document.querySelectorAll('.project-item');
 
-      filterButtons.forEach(button => {
-        button.addEventListener('click', (e) => {
-          e.preventDefault(); // a 태그일 경우 이동 방지
-          const filter = button.dataset.filter.trim();
+       filterButtons.forEach(button => {
+           button.addEventListener('click', () => {
+               const filter = button.dataset.filter;
 
-          // 1️⃣ 버튼 스타일 초기화
-          filterButtons.forEach(btn => {
-            btn.classList.remove('bg-gold', 'text-white');
-            btn.classList.add('text-gray-400', 'border', 'border-gray-200');
-          });
+               // 1️⃣ 버튼 스타일 초기화
+               filterButtons.forEach(btn => {
+                   btn.classList.remove('bg-gold', 'text-white');
+                   btn.classList.add('text-gray-400', 'border', 'border-gray-200');
+               });
 
-          // 2️⃣ 활성 버튼 스타일 적용
-          button.classList.add('bg-gold', 'text-white');
-          button.classList.remove('text-gray-400');
+               // 2️⃣ 활성 버튼 스타일 적용
+               button.classList.add('bg-gold', 'text-white');
+               button.classList.remove('text-gray-400');
 
-          // 3️⃣ 프로젝트 필터링 with fade
-          projects.forEach(project => {
-            const category = project.dataset.category.trim();
+               // 3️⃣ 프로젝트 필터링 with fade
+               projects.forEach(project => {
+                   const category = project.dataset.category.trim();
 
-            if (filter === '전체' || category === filter) {
-              project.classList.remove('hidden');
-               setTimeout(() => project.style.opacity = 1, 10);
-            } else {
-              project.style.opacity = 0;
-               setTimeout(() => project.classList.add('hidden'), 300);
-            }
-          });
+                   if (filter === '전체' || category === filter) {
+                       project.classList.remove('hidden');
+                       setTimeout(() => {
+                           project.style.opacity = 1;
+                       }, 10); // fade in
+                   } else {
+                       project.style.opacity = 0; // fade out
+                       setTimeout(() => {
+                           project.classList.add('hidden');
+                       }, 300); // opacity transition duration
+                   }
+               });
 
-          // 4️⃣ 포트폴리오 섹션으로 스크롤
-          const portfolioSection = document.getElementById('portfolio');
-          if (portfolioSection) {
-            const offset = 80; // 상단 메뉴 높이 보정
-            const targetPosition = portfolioSection.getBoundingClientRect().top + window.pageYOffset - offset;
-            window.scrollTo({
-              top: targetPosition,
-              behavior: 'smooth'
-            });
-          }
-        });
-      });
+               // 4️⃣ fade 완료 후 포트폴리오 섹션으로 스크롤
+               setTimeout(() => {
+                   const portfolioSection = document.getElementById('portfolio');
+                   if (portfolioSection) {
+                       const offset = 80; // 상단 메뉴 높이 보정
+                       const targetPosition = portfolioSection.getBoundingClientRect().top + window.pageYOffset - offset;
+                       window.scrollTo({
+                           top: targetPosition,
+                           behavior: 'smooth'
+                       });
+                   }
+               }, 310); // fade 끝난 후
+           });
+       });
 </script>
 </body>
 </html>
+
 
 
 
