--- a/index.html
+++ b/index.html
@@ -453,92 +453,59 @@
 
     <!-- Scripts -->
     <script>
-      // ----------------------------
-      // Mobile Menu Toggle
-      // ----------------------------
-      const menuBtn    = document.getElementById('menu-btn');
-      const mobileMenu = document.getElementById('mobile-menu');
-
-      menuBtn.addEventListener('click', () => {
-        mobileMenu.classList.toggle('hidden');
-      });
-
-      document.querySelectorAll('#mobile-menu a').forEach(link => {
-        link.addEventListener('click', () => {
-          mobileMenu.classList.add('hidden');
+        // Mobile Menu Toggle
+        const menuBtn = document.getElementById('menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+        
+        menuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
         });
-      });
 
-      // Smooth scroll for anchors
-      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-          e.preventDefault();
-          const targetId = this.getAttribute('href');
-          if(targetId === '#') return;
-          const targetElement = document.querySelector(targetId);
-          if (targetElement) {
-            const offset = 80;
-            const targetPosition = targetElement.getBoundingClientRect().top + window.pageYOffset - offset;
-             window.scrollTo({
-              top: targetPosition,
-              behavior: 'smooth'
+        // Close mobile menu on click link
+        document.querySelectorAll('#mobile-menu a').forEach(link => {
+            link.addEventListener('click', () => {
+                mobileMenu.classList.add('hidden');
             });
-          }
         });
-      });
 
-       // ----------------------------
-       // Portfolio Filter + Fade + Scroll
-       // ----------------------------
-       const filterButtons = document.querySelectorAll('.filter-btn');
-       const projects = document.querySelectorAll('.project-item');
+        // Simple smooth scroll fallback (if needed)
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const targetId = this.getAttribute('href');
+                if(targetId === '#') return;
+                
+                const targetElement = document.querySelector(targetId);
+                if (targetElement) {
+                    const offset = 80;
+                    const targetPosition = targetElement.getBoundingClientRect().top + window.pageYOffset - offset;
+                    window.scrollTo({
+                        top: targetPosition,
+                        behavior: 'smooth'
+                    });
+                }
+            });
+        });
 
-       filterButtons.forEach(button => {
-           button.addEventListener('click', () => {
-               const filter = button.dataset.filter;
+        // ----------------------------
+        // Portfolio Filter JS 추가
+        // ----------------------------
+        document.querySelectorAll('.filter-btn').forEach(button => {
+            button.addEventListener('click', function () {
+                const filter = this.dataset.filter;
 
-               // 1️⃣ 버튼 스타일 초기화
-               filterButtons.forEach(btn => {
-                   btn.classList.remove('bg-gold', 'text-white');
-                   btn.classList.add('text-gray-400', 'border', 'border-gray-200');
-               });
-
-               // 2️⃣ 활성 버튼 스타일 적용
-               button.classList.add('bg-gold', 'text-white');
-               button.classList.remove('text-gray-400');
-
-               // 3️⃣ 프로젝트 필터링 with fade
-               projects.forEach(project => {
-                   const category = project.dataset.category.trim();
-
-                   if (filter === '전체' || category === filter) {
-                       project.classList.remove('hidden');
-                       setTimeout(() => {
-                           project.style.opacity = 1;
-                       }, 10); // fade in
-                   } else {
-                       project.style.opacity = 0; // fade out
-                       setTimeout(() => {
-                           project.classList.add('hidden');
-                       }, 300); // opacity transition duration
-                   }
-               });
-
-               // 4️⃣ fade 완료 후 포트폴리오 섹션으로 스크롤
-               setTimeout(() => {
-                   const portfolioSection = document.getElementById('portfolio');
-                   if (portfolioSection) {
-                       const offset = 80; // 상단 메뉴 높이 보정
-                       const targetPosition = portfolioSection.getBoundingClientRect().top + window.pageYOffset - offset;
-                       window.scrollTo({
-                           top: targetPosition,
-                           behavior: 'smooth'
-                       });
-                   }
-               }, 310); // fade 끝난 후
-           });
-       });
-</script>
+                document.querySelectorAll('.project-item').forEach(item => {
+                    if (filter === "전체" || item.dataset.category === filter) {
+                        item.style.display = "block";
+                        item.classList.remove("opacity-0");
+                        item.classList.add("opacity-100");
+                    } else {
+                        item.style.display = "none";
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 </html>
 
