--- a/index.html
+++ b/index.html
@@ -422,11 +422,11 @@
                     <div>
                         <h4 class="font-bold text-gray-900 mb-6 uppercase">SERVICES</h4>
                         <ul class="space-y-3 text-gray-400 font-medium">
-                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="철계단">계단 공사</a></li>
-                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="난간">난간 공사</a></li>
-                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="복층공사">복층 공사</a></li>
-                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="잡철">잡철</a></li>
-                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="철구조물">철구조물</a></li>
+                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="철계단">계단 공사</a></li>
+                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="난간">난간 공사</a></li>
+                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="복층공사">복층 공사</a></li>
+                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="잡철">잡철</a></li>
+                            <li><a href="#portfolio" class="filter-btn hover:text-gold" data-filter="철구조물">철구조물</a></li>
                         </ul>
                     </div>
                     <div>
@@ -508,6 +508,7 @@
     </script>
 </body>
 </html>
+
 
 
 
