--- a/index.html
+++ b/index.html
@@ -312,24 +312,24 @@
                     <div class="space-y-8 w-full max-w-md md:mx-auto lg:mx-0 lg:max-w-none">
                         <!-- Phone -->
                         <a href="tel:01022430481"
-                           onclick="return confirm('010-2243-0481로 전화를 거시겠습니까?')"
-                           class="flex flex-col md:flex-row items-center gap-6 group cursor-pointer">
+ 
+                          onclick="return confirm('010-2243-0481로 전화를 거시겠습니까?')"
+                          class="flex flex-col md:flex-row items-center gap-6 group cursor-pointer">
 
-                            <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 group-hover:bg-gold group-hover:text-black transition-all shadow-sm">
-                                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
-                                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 011.21-.502l4.493 1.498a1 1 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
-                                    </path>
+
+                            <div class="w-16 h-16 rounded-3xl bg-gray-50 flex items-center justify-center border border-gray-100 
+                                        group-hover:bg-gold group-hover:text-black transition-all shadow-sm">
+                                <!-- 새 전화 아이콘 -->
+                                <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 011.21-.502l4.493 1.498a1 1 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
                                 </svg>
                             </div>
 
                             <div class="md:text-left text-center">
-                                <p class="text-gray-500 text-xs font-bold uppercase tracking-widest mb-1">
-                                    Quick Call
-                            </p>
-                            <p class="text-2xl font-bold">010-2243-0481</p>
-                        </div>
-
+                                <p class="text-gray-500 text-xs font-bold uppercase tracking-widest mb-1">Quick Call</p>
+                                <p class="text-2xl font-bold">010-2243-0481</p>
+                         </div>
                         </a>
 
                         <!-- Email -->
@@ -509,6 +509,7 @@
     </script>
 </body>
 </html>
+
 
 
 
