--- a/index.html
+++ b/index.html
@@ -478,11 +478,12 @@
             </div>
         </div>
     </div>
-    <script>
+
+    <!-- JS for Filter + Max 6 Cards per Category + Grid 정렬 -->
+<script>
 document.addEventListener('DOMContentLoaded', () => {
   const maxCardsPerCategory = 6;
   const filterButtons = document.querySelectorAll('.filter-btn');
-  const grid = document.querySelector('.grid'); // Projects Grid
   const allCards = Array.from(document.querySelectorAll('.project-item'));
 
   // 카테고리별 카드 그룹 생성
@@ -493,27 +494,31 @@ document.addEventListener('DOMContentLoaded', () => {
     categories[category].push(card);
   });
 
-  // 카드 표시 함수: grid 안에 넣어주기
+  // 카드 표시 함수
   function showCards(filteredCategory = '전체') {
-    grid.innerHTML = ''; // grid 초기화
+    allCards.forEach(card => {
+      card.style.opacity = 0;
+      card.style.display = 'none';
+    });
 
     Object.keys(categories).forEach(category => {
       if (filteredCategory !== '전체' && category !== filteredCategory) return;
 
-      const catCards = categories[category].slice(0, maxCardsPerCategory); // 최대 6개
+      // 최대 6개까지만 보여주기
+      const catCards = categories[category].slice(0, maxCardsPerCategory);
       catCards.forEach(card => {
-        grid.appendChild(card); // grid 안에 카드 추가
-        card.style.opacity = 0;
         card.style.display = 'block';
-        setTimeout(() => card.style.opacity = 1, 10); // fade-in
+        setTimeout(() => {
+          card.style.opacity = 1; // fade-in
+        }, 10);
       });
     });
   }
 
-  // 초기 로드 시 전체 카드 표시
+  // 초기 로드: 전체 카테고리 표시
   showCards();
 
-  // 필터 버튼 클릭 이벤트
+  // 필터 버튼 클릭
   filterButtons.forEach(button => {
     button.addEventListener('click', () => {
       const filter = button.dataset.filter;
@@ -753,6 +758,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
