--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
 
         <!-- Projects Grid -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 auto-rows-fr">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 auto-rows-fr opacity-0 transition-opacity duration-500">
             <!-- Project Cards (data-category 적용) -->
             <div class="group block overflow-hidden project-item opacity-100 transition-opacity duration-500" data-category="철계단">
                 <div class="relative aspect-[4/3] mb-8 overflow-hidden rounded-[2.5rem] bg-gray-200">
@@ -510,6 +510,7 @@ document.addEventListener('DOMContentLoaded', () => {
         card.style.display = 'block';
         setTimeout(() => {
           card.style.opacity = 1; // fade-in
+            grid.style.opacity = 1;// fade-in
         }, 10);
       });
     });
@@ -758,6 +759,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
