--- a/index.html
+++ b/index.html
@@ -675,11 +675,11 @@ document.addEventListener('DOMContentLoaded', () => {
                     <div>
                         <h4 class="font-bold text-gray-900 mb-6 uppercase">SERVICES</h4>
                         <ul class="space-y-3 text-gray-400 font-medium">
-                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="철계단">계단 공사</a></li>
-                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="난간">난간 공사</a></li>
-                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="복층공사">복층 공사</a></li>
-                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="잡철">잡철</a></li>
-                            <li><a href="#" class="filter-btn hover:text-gold" data-filter="철구조물">철구조물</a></li>
+                            <li><a href="#" class="filter-btn" data-filter="철계단">계단 공사</a></li>
+                            <li><a href="#" class="filter-btn" data-filter="난간">난간 공사</a></li>
+                            <li><a href="#" class="filter-btn" data-filter="복층공사">복층 공사</a></li>
+                            <li><a href="#" class="filter-btn" data-filter="잡철">잡철</a></li>
+                            <li><a href="#" class="filter-btn" data-filter="철구조물">철구조물</a></li>
                         </ul>
                     </div>
                     <div>
@@ -761,6 +761,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
