--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 </div>
             </div>
 
-            <div class="group block overflow-hidden project-item opacity-100 transition-opacity duration-500" data-category="잡철">
+            <div class="group block overflow-hidden project-item bg-white transition-opacity duration-500" data-category="잡철">
                 <div class="relative aspect-[4/3] mb-8 overflow-hidden rounded-[2.5rem] bg-gray-200">
                   <a href="https://blog.naver.com/sungboo1211/223898481938?trackingCode=blog_bloghome_searchlist" target="_blank">
                     <img src="images/파주 지영동 마당 확장 공사.jpg" alt="파주 지영동 마당 확장 공사" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
@@ -404,7 +404,7 @@
                 </div>
             </div>
 
-            <div class="group block overflow-hidden project-item opacity-100 transition-opacity duration-500" data-category="철계단">
+            <div class="group block overflow-hidden project-item bg-white transition-opacity duration-500" data-category="철계단">
                 <div class="relative aspect-[4/3] mb-8 overflow-hidden rounded-[2.5rem] bg-gray-200">
                     <img src="images/부평구 갈산동 상가 내부계단 시공.jpg" alt="부평구 갈산동 상가 내부계단 시공" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                     <div class="absolute top-6 left-6">
@@ -417,7 +417,7 @@
                 </div>
             </div>
 
-            <div class="group block overflow-hidden project-item opacity-100 transition-opacity duration-500" data-category="잡철">
+            <div class="group block overflow-hidden project-item bg-white transition-opacity duration-500" data-category="잡철">
                 <div class="relative aspect-[4/3] mb-8 overflow-hidden rounded-[2.5rem] bg-gray-200">
                   <a href="https://blog.naver.com/sungboo1211/223730902696?trackingCode=blog_bloghome_searchlist" target="_blank">
                     <img src="images/강남구 반포동 애견샵 애견하우스 시공.jpg" alt="강남구 반포동 애견샵 애견하우스 시공" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
@@ -432,7 +432,7 @@
                 </div>
             </div>
 
-            <div class="group block overflow-hidden project-item opacity-100 transition-opacity duration-500" data-category="잡철">
+            <div class="group block overflow-hidden project-item bg-white transition-opacity duration-500" data-category="잡철">
                 <div class="relative aspect-[4/3] mb-8 overflow-hidden rounded-[2.5rem] bg-gray-200">
                   <a href="https://blog.naver.com/sungboo1211/223730879041?trackingCode=blog_bloghome_searchlist" target="_blank">
                     <img src="images/서대문구 홍제동 상가 내부 선반 시공.jpg" alt="서대문구 홍제동 상가 내부 선반 시공" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
@@ -447,7 +447,7 @@
                 </div>
             </div>
 
-            <div class="group block overflow-hidden project-item opacity-100 transition-opacity duration-500" data-category="철구조물">
+            <div class="group block overflow-hidden project-item bg-white transition-opacity duration-500" data-category="철구조물">
                 <div class="relative aspect-[4/3] mb-8 overflow-hidden rounded-[2.5rem] bg-gray-200">
                   <a href="https://blog.naver.com/sungboo1211/223633626497?trackingCode=blog_bloghome_searchlist" target="_blank">
                     <img src="images/광진구 시흥동 국립예고 강당 내 빔 보강공사.jpg" alt="광진구 시흥동 국립예고 강당 내 빔 보강공사" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
@@ -462,7 +462,7 @@
                 </div>
             </div>
 
-            <div class="group block overflow-hidden project-item opacity-100 transition-opacity duration-500" data-category="철구조물">
+            <div class="group block overflow-hidden project-item bg-white transition-opacity duration-500" data-category="철구조물">
                 <div class="relative aspect-[4/3] mb-8 overflow-hidden rounded-[2.5rem] bg-gray-200">
                   <a href="https://blog.naver.com/sungboo1211/222404518656?trackingCode=blog_bloghome_searchlist" target="_blank">
                     <img src="images/전남 강진 모 건물 벽채 하지작업.jpg" alt="전남 강진 모 건물 벽채 하지작업" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
@@ -477,7 +477,7 @@
                 </div>
             </div>            
 
-            <div class="group block overflow-hidden project-item opacity-100 transition-opacity duration-500" data-category="철구조물">
+            <div class="group block overflow-hidden project-item bg-white transition-opacity duration-500" data-category="철구조물">
                 <div class="relative aspect-[4/3] mb-8 overflow-hidden rounded-[2.5rem] bg-gray-200">
                   <a href="https://blog.naver.com/sungboo1211/222404506259?trackingCode=blog_bloghome_searchlist" target="_blank">
                     <img src="images/양수리 삼성요양병원 구름다리 공사.jpg" alt="양수리 삼성요양병원 구름다리 공사" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
@@ -776,6 +776,7 @@ document.addEventListener('DOMContentLoaded', () => {
     </script>
 </body>
 </html>
+
 
 
 
