--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
 
         <!-- Projects Grid -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 auto-rows-fr opacity-0 transition-opacity duration-500">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 auto-rows-fr transition-opacity duration-500">
             <!-- Project Cards (data-category 적용) -->
             <div class="group block overflow-hidden project-item bg-white transition-opacity duration-500" data-category="철계단">
                 <div class="relative aspect-[4/3] mb-8 overflow-hidden rounded-[2.5rem] bg-gray-200">
@@ -724,6 +724,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
